# foobar-lings

./: Cargo.toml  README.md  info.toml
exercises/foo/: bar.rs
src/: args.rs  exercise.rs  list.rs  lsp.rs  main.rs  run.rs  watch.rs
