[package]
name = "_foobar_lings"
version = "0.1.0"
edition = "2021"
authors = [
  "0xAsten <0xasten@gmail.com>",
]

[dependencies]
argh = "0.1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16"
regex = "1.5"
console = "0.15"
notify = "4.0"
glob = "0.3.0"
serde_json = "1.0.81"

[[bin]]
name = "foobarlings"
path = "src/main.rs"